# patches

./: .gitignore  Makefile  parse.py  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
inference/: infer.cpp
patches/: augmentations.py  dataset.py  export.py  inference.py  pipeline.py  plot.py  train.py
scripts/: train-test-split.py  validate-augmentations.py  validate-dataset.py
tests/: conftest.py  test_augmentations.py  test_dataset.py  test_export.py  test_inference.py  test_inferences.py  test_parses.py  test_parses_visdrone.py  test_train_split.py  test_trains.py
